# workshop-github-actions-2026-feb

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: container.yml  deploy-full-example.yml  deploy.yml  download-artifact.yml  hello.yml  lint-and-format.yml  release.yml  scan.yml  test.yml  version.yml
data/: nino34_sample.csv  sst_sample.csv
src/sst/: __init__.py  cli.py  io.py  ml.py  plot.py  transform.py
tests/: test_cli.py  test_ml.py
